tests/compile_fail/effectful_arrow_extra_member.stderr
error[E0277]: not every member of this fact set is declared by the enclosing set
  --> tests/compile_fail/effectful_arrow_extra_member.rs:6:13
   |
 6 |       let _ = obzenflow_dsl::effectful_transform!(
   |  _____________^
 7 | |         Input -> { First } => FirstAndSecond,
 8 | |         effects: [],
 9 | |         middleware: []
10 | |     );
   | |_____^ unsatisfied trait bound
   |
   = help: the trait `SubsetOf<WithMember<support::First, EmptySet>, SubsetProofStep<MemberFound, SubsetProofStep<MemberAfter<_>, SubsetProofEnd>>>` is not implemented for `WithMember<support::First, WithMember<support::Second, EmptySet>>`
   = note: every fact an allowed effect may author must be a member of the handler's `Output` set, and a stage arrow must equal the handler's declared set in both directions (FLOWIP-120z)
note: required by a bound in `__obzenflow_assert_arrow_declares_every_handler_output_member`
  --> tests/compile_fail/effectful_arrow_extra_member.rs:6:13
   |
 6 |       let _ = obzenflow_dsl::effectful_transform!(
   |  _____________^
 7 | |         Input -> { First } => FirstAndSecond,
 8 | |         effects: [],
 9 | |         middleware: []
10 | |     );
   | |     ^
   | |     |
   | |_____required by a bound in this function
   |       required by this bound in `__obzenflow_assert_arrow_declares_every_handler_output_member`
   = note: this error originates in the macro `$crate::__obzenflow_assert_effectful_transform_contract` which comes from the expansion of the macro `obzenflow_dsl::effectful_transform` (in Nightly builds, run with -Z macro-backtrace for more info)
